upgrade to sbt-idea-plugin 0.4.1, upgrade to intellij scala-plugin 2.0.4, upgrade to intellij 15.0.2 (143.1184.17), add example module, prototypical sbt plugin that provides runIdea task.